# QMS

./: .gitignore  README.md
admin/: TODO.md
backend/: Backend.toml  Cargo.toml  Config.toml
backend/src/: config.rs  database.rs  main.rs
docs/: GettingStarted.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  firebaseConfig.ts  main.tsx
frontend/src/components/: Form.tsx  Nav.tsx
queue-desk/: Cargo.toml  Dioxus.toml
queue-desk/assets/: main.css
queue-desk/src/: main.rs
